tests/errors/map_index_non_string.dang
# This should fail: maps are indexed by String!, not Int!
m: Map[Int!] = ["a": 1]
pub bad = m[0]
